[레거시 코드 리팩터링 - 2단계] 마루(송채원) 미션 제출합니다. (#332)
* refactor: MenuGroup, MenuGroupService 리팩토링

- request dto 생성
- 테스트 코드 수정

* refactor: Product, ProductService 리팩토링

- request dto 생성
- 테스트 코드 수정

* refactor: OrderTable, TableService 리팩토링

- request dto 생성
- 테스트 코드 수정

* refactor: TableGroup, TableGroupService 리팩토링

- request dto 생성
- 테스트 코드 수정

* refactor: Menu, MenuProduct, MenuService 리팩토링

- request dto 생성
- 테스트 코드 수정

* refactor: Order, OrderService 리팩토링

- request dto 생성
- 테스트 코드 수정

* feat: 커스텀 예외 생성 및 적용

* feat: service 테스트 코드 context caching 하도록 변경

* refactor: MenuRepository 생성 및 로직 이동

* test: 테스트 코드 오류 수정

* refactor: OrderRepository 생성 및 로직 이동

* refactor: TableGroupRepository 생성 및 로직 이동

* refactor: TableRepository 생성 및 로직 이동

* refactor: 도메인 생성자 리팩토링

* refactor: List.of 적용

* test: repository 테스트 작성

* test: domain 테스트 작성

- 커스텀 예외 추가
- repository 어노테이션 변경

* test: 테스트 격리, domain fixture 생성 및 리팩터링

* refactor: menuGroupId 예외 로직 이동 및 orderStatus 필드 enum으로 변경

* refactor: Price 객체 생성

* refactor: 불필요한 코드 제거

* refactor: repository test 리팩터링

* refactor: MenuService 리팩토링 및 MenuProductRepository 생성

* refactor: service repository 의존 제거

* refactor: repository 삭제

* refactor: service 및 도메인 생성자 리팩터링

* test: 예외 상황에 대한 테스트 코드 보충

- 테이블 그룹화 예외 추가