@@ -1,81 +1,119 @@
 package kitchenpos.application;
 
+import static kitchenpos.fixture.DomainFixture.createOrderTable;
+import static kitchenpos.fixture.DomainFixture.createTableGroup;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import java.time.LocalDateTime;
 import java.util.Arrays;
-import java.util.Collections;
-import kitchenpos.dao.OrderTableDao;
-import kitchenpos.dao.TableGroupDao;
+import java.util.List;
+import kitchenpos.domain.Order;
+import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.TableGroup;
+import kitchenpos.exception.NotFoundOrderTableException;
+import kitchenpos.exception.OrderTableGroupingSizeException;
+import kitchenpos.exception.OrderTableUnableUngroupingStatusException;
+import kitchenpos.exception.UnableToGroupingException;
+import kitchenpos.ui.dto.OrderTableIdDto;
+import kitchenpos.ui.dto.request.TableGroupCreateRequest;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 
-@SpringBootTest
-class TableGroupServiceTest {
+class TableGroupServiceTest extends ServiceTest {
 
-    @Autowired
-    private TableGroupService tableGroupService;
+    private OrderTable saved1;
+    private OrderTable saved2;
 
-    @Autowired
-    private OrderTableDao orderTableDao;
-
-    @Autowired
-    private TableGroupDao tableGroupDao;
+    @BeforeEach
+    void setUp() {
+        saved1 = orderTableDao.save(createOrderTable(null, true));
+        saved2 = orderTableDao.save(createOrderTable(null, true));
+    }
 
     @Test
     void 테이블그룹을_생성한다() {
-        TableGroup tableGroup = new TableGroup();
-        OrderTable saved = orderTableDao.save(createOrderTable(true));
-        OrderTable saved1 = orderTableDao.save(createOrderTable(true));
-        tableGroup.setOrderTables(Arrays.asList(saved, saved1));
+        TableGroupCreateRequest tableGroupCreateRequest = new TableGroupCreateRequest(Arrays.asList(
+                new OrderTableIdDto(saved1.getId()),
+                new OrderTableIdDto(saved2.getId())
+        ));
 
-        TableGroup savedTableGroup = tableGroupService.create(tableGroup);
+        TableGroup savedTableGroup = tableGroupService.create(tableGroupCreateRequest);
 
         assertThat(tableGroupDao.findById(savedTableGroup.getId())).isPresent();
     }
 
     @Test
-    void 테이블그룹을_생성할때_주문테이블_수가_2개미만이면_예외를_발생한다() {
-        TableGroup tableGroup = new TableGroup();
-        OrderTable saved = orderTableDao.save(createOrderTable(true));
-        tableGroup.setOrderTables(Collections.singletonList(saved));
+    void 테이블그룹을_생성할때_비어있지_않으면_예외를_발생한다() {
+        OrderTable saved3 = orderTableDao.save(createOrderTable(null, false));
+        TableGroupCreateRequest tableGroupCreateRequest = new TableGroupCreateRequest(List.of(
+                new OrderTableIdDto(saved1.getId()),
+                new OrderTableIdDto(saved3.getId())
+        ));
 
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.create(tableGroupCreateRequest))
+                .isInstanceOf(UnableToGroupingException.class);
+    }
+
+    @Test
+    void 테이블그룹을_생성할때_이미_그룹화됐으면_예외를_발생한다() {
+        TableGroup tableGroup = tableGroupDao.save(createTableGroup());
+        OrderTable saved3 = orderTableDao.save(createOrderTable(tableGroup.getId(), false));
+        TableGroupCreateRequest tableGroupCreateRequest = new TableGroupCreateRequest(List.of(
+                new OrderTableIdDto(saved1.getId()),
+                new OrderTableIdDto(saved3.getId())
+        ));
+
+        assertThatThrownBy(() -> tableGroupService.create(tableGroupCreateRequest))
+                .isInstanceOf(UnableToGroupingException.class);
+    }
+
+    @Test
+    void 테이블그룹을_생성할때_주문테이블_수가_2개미만이면_예외를_발생한다() {
+        TableGroupCreateRequest tableGroupCreateRequest = new TableGroupCreateRequest(List.of(
+                new OrderTableIdDto(saved1.getId())
+        ));
+
+        assertThatThrownBy(() -> tableGroupService.create(tableGroupCreateRequest))
+                .isInstanceOf(OrderTableGroupingSizeException.class);
     }
 
     @Test
     void 테이블그룹을_생성할때_저장된_orderTables와_일치하지않으면_예외를_발생한다() {
-        TableGroup tableGroup = new TableGroup();
-
-        tableGroup.setOrderTables(Arrays.asList(
-                createOrderTable(true),
-                createOrderTable(true)
+        TableGroupCreateRequest tableGroupCreateRequest = new TableGroupCreateRequest(Arrays.asList(
+                new OrderTableIdDto(saved1.getId()),
+                new OrderTableIdDto(0L)
         ));
 
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.create(tableGroupCreateRequest))
+                .isInstanceOf(NotFoundOrderTableException.class);
     }
 
     @Test
     void 그룹을_해제한다() {
-        TableGroup tableGroup = new TableGroup();
-        OrderTable saved = orderTableDao.save(createOrderTable(true));
-        OrderTable saved1 = orderTableDao.save(createOrderTable(true));
-        tableGroup.setOrderTables(Arrays.asList(saved, saved1));
+        TableGroup tableGroup = new TableGroup(LocalDateTime.now());
+        TableGroup savedTableGroup = tableGroupDao.save(tableGroup);
 
-        tableGroupService.create(tableGroup);
-        tableGroupService.ungroup(tableGroup.getId());
+        saved1 = orderTableDao.save(createOrderTable(savedTableGroup.getId(), true));
+        saved2 = orderTableDao.save(createOrderTable(savedTableGroup.getId(), true));
 
-        assertThat(orderTableDao.findById(saved.getId()).get().isEmpty()).isFalse();
+        tableGroupService.ungroup(savedTableGroup.getId());
+
+        assertThat(orderTableDao.findById(saved1.getId()).get().getTableGroupId()).isNull();
     }
 
-    private OrderTable createOrderTable(boolean isEmpty) {
-        OrderTable orderTable = new OrderTable();
-        orderTable.setEmpty(isEmpty);
-        return orderTable;
+    @Test
+    void 그룹을_해제할수_없는_상태면_예외를_발생한다() {
+        TableGroup tableGroup = new TableGroup(LocalDateTime.now());
+        TableGroup savedTableGroup = tableGroupDao.save(tableGroup);
+
+        saved1 = orderTableDao.save(createOrderTable(savedTableGroup.getId(), true));
+        saved2 = orderTableDao.save(createOrderTable(savedTableGroup.getId(), true));
+
+        orderDao.save(new Order(saved1.getId(), OrderStatus.COOKING, LocalDateTime.now()));
+
+        assertThatThrownBy(() -> tableGroupService.ungroup(savedTableGroup.getId()))
+                .isInstanceOf(OrderTableUnableUngroupingStatusException.class);
     }
 }
